# anybem

./: .gitignore  .gitmodules  CITATION.bib  CMakeLists.txt  LICENSE  README.md
include/anybem/: hmo_reader.h  impala.h  model.h  reader.h  types.h  types.h.in
src/: CMakeLists.txt  born.cpp  born.h  born.impala  constants.impala  main.cpp  main.impala  model.impala  util.impala
src/cpp/: error.h  hmo_reader.cpp  hmo_reader.h  impala.h  main.cpp  model.h  reader.h  types.h  util.cpp  util.h
src/impala/: born.impala  cmake.impala.in  common.impala  constants.impala  export.impala  import.impala  laplace.impala  linalg.impala  local.impala  main.impala  math.impala  matrix.impala  model.impala  nonlocal.impala  radon.impala  rjasanow.impala  types.impala  util.impala  yukawa.impala
src/impala/backend/: backend_cpu.impala  backend_cuda.impala
src/impala/intrinsics/: intrinsics_f32.impala  intrinsics_f64.impala
src/impala/platform/: matrix_acc.impala  matrix_cpu.impala
test/: CMakeLists.txt  badhron_f32.impala  badhron_f64.impala  laplace.impala  linalg.impala  main.impala  math.impala  radon.impala  rjasanow.impala  runtests.impala  yukawa.impala
tools/cli/: CMakeLists.txt  main.cpp
